[gd_scene load_steps=4 format=3 uid="uid://c1s58wpw6vw7b"]

[ext_resource type="PackedScene" uid="uid://bn3bc0f3yocbf" path="res://Scenes/fuser.tscn" id="1_mlna0"]
[ext_resource type="Script" path="res://Scripts/play_area.gd" id="1_pn6m7"]
[ext_resource type="PackedScene" uid="uid://c6nyhkhw1uomw" path="res://Scenes/hand_area.tscn" id="3_ku3sd"]

[node name="PlayArea" type="Node2D"]
script = ExtResource("1_pn6m7")

[node name="Fuser" parent="." instance=ExtResource("1_mlna0")]
position = Vector2(351, 226)

[node name="Fuser2" parent="." instance=ExtResource("1_mlna0")]
position = Vector2(518, 227)

[node name="Fuser3" parent="." instance=ExtResource("1_mlna0")]
position = Vector2(695, 228)

[node name="hand" parent="." instance=ExtResource("3_ku3sd")]
unique_name_in_owner = true
position = Vector2(205, 468)

[node name="Button" type="Button" parent="."]
offset_left = 357.0
offset_top = 334.0
offset_right = 481.0
offset_bottom = 403.0
text = "Add Water"

[node name="Button2" type="Button" parent="."]
offset_left = 529.0
offset_top = 337.0
offset_right = 653.0
offset_bottom = 406.0
text = "Add Fire"

[node name="Button3" type="Button" parent="."]
offset_left = 702.0
offset_top = 328.0
offset_right = 834.0
offset_bottom = 403.0
text = "Add Boiling Water"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
